@@ -17,6 +17,8 @@ Changes in openair 1.0-0 [2013-11-21]
 * 	Refine names returned by importADMS when used with .pst file
 *	Fix trajectory code in appendix D in the manual (some function
 	arguments were not passed)
+*	Better user defined limits scaling in polarPlot, scatterPlot
+	when limits within data range
 
 Changes in openair 0.9-0 [2013-02-13]
 =====================================
